# poetry-generator

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  requirements.txt  sweep.yaml
conf/: config.yaml
conf/callbacks/: default.yaml
conf/data/: poetry.yaml
conf/logger/: wandb.yaml
conf/model/: lstm.yaml  rnn.yaml
conf/scheduler/: cosine.yaml  none.yaml  step.yaml
conf/trainer/: default.yaml
scripts/: run_sweep.sh  wandb_hydra_wrapper.py
src/poetry_generator/: __init__.py
src/poetry_generator/callbacks/: __init__.py  generation.py  save_vocab.py
src/poetry_generator/data/: __init__.py  datamodule.py
src/poetry_generator/models/: __init__.py  core.py  lightning.py
src/poetry_generator/pipelines/: __init__.py  generate.py  train.py
